--- a/projecteExamenGit/projecteExamenGit/projecteExamenGit.csproj
+++ b/projecteExamenGit/projecteExamenGit/projecteExamenGit.csproj
@@ -52,8 +52,23 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmAnimal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAnimal.Designer.cs">
+      <DependentUpon>FrmAnimal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmViatge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmViatge.Designer.cs">
+      <DependentUpon>FrmViatge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
